[LUX] - fixed position of remove button, when no add button is present - fixed height of custom select box

--- a/src/assets/font/css/bpmn.css
+++ b/src/assets/font/css/bpmn.css
@@ -58,3 +58,11 @@
   white-space: -o-pre-wrap;
   word-wrap: break-word;
 }
+
+.bpp-properties-panel .action-button.clear.no-add {
+  right: 0;
+}
+
+.bpp-select.default-size select {
+  height: 26px;
+}
